--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "clsx": "^2.1.1",
     "expo": "~53.0.22",
     "expo-asset": "~11.1.7",
-    "expo-av": "~15.1.7",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
@@ -43,6 +42,8 @@
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.3.3",
     "moment": "^2.30.1",
     "moti": "^0.30.0",
     "nativewind": "^4.1.23",
@@ -50,6 +51,7 @@
     "react-dom": "19.0.0",
     "react-i18next": "^15.7.1",
     "react-native": "0.79.6",
+    "react-native-config": "^1.5.8",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-charts": "^1.4.63",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -64,7 +66,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.7.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-audio": "~0.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
